L4 spacing fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
@@ -6,12 +6,16 @@
         &.active {
             font-weight: 900;
         }
-        i.with-arrow {
+        i.icon {
             @include margin-left($margin-xs);
             vertical-align: top;
             &::before {
                 font-size: $font-sm;
                 line-height: $font-sm;
+            }
+        }
+        i.with-arrow {
+            &::before {
                 transform: rotate(90deg);
             }
         }
